Fix cut off chart labels in fullscreen

--- a/frontend/src/metabase/css/dashboard.css
+++ b/frontend/src/metabase/css/dashboard.css
@@ -306,7 +306,7 @@
 }
 
 @media screen and (min-width: 1540px) {
-  .Dashboard.Dashboard--fullscreen { font-size: 1.6em; }
+  .Dashboard.Dashboard--fullscreen { font-size: 1.4em; }
 }
 
 
